Fix error when overflowing a promo block

--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -1,5 +1,6 @@
 .about-company {
   position: relative;
+  background-color: $basic-white;
 }
 
 .about-company::before {
