--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -2,6 +2,7 @@
   position: relative;
   padding-top: 93px;
   padding-bottom: 55px;
+  background-color: $basic-white;
 
   @media (max-width: $tablet-width-only) {
     padding-top: 36px;
@@ -22,7 +23,7 @@
   background-position: center;
   background-image: url("../img/stack.svg#icon-2");
   transform: translate(-50%, -25%) rotate(180deg);
-  z-index: -1;
+  z-index: 1;
 
   @media (max-width: $tablet-width-only) {
     top: 48%;
@@ -50,7 +51,6 @@
   background-position: center;
   background-image: url("../img/stack.svg#icon-1");
   transform: rotate(180deg);
-  z-index: -1;
 
   @media (max-width: $tablet-width-only) {
     content: none;
@@ -63,6 +63,7 @@
   column-gap: 32px;
   row-gap: 30px;
   padding-left: 120px;
+  position: relative;
 
   @media (max-width: $tablet-width-only) {
     padding-left: 0;
@@ -82,6 +83,7 @@
   border-left: 3px solid $basic-blue;
   position: relative;
   background-color: $basic-white;
+  z-index: 5;
 
   @media (max-width: $tablet-width-only) {
     padding: 70px 18px 13px 26px;
@@ -96,18 +98,18 @@
   }
 }
 
-.advantage__item:first-child::after {
+.advantage__list::before {
   content: "";
   position: absolute;
   width: 250px;
   height: 260px;
   top: -70px;
-  left: -183px;
+  left: -83px;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
   background-image: url("../img/stack.svg#icon-1");
-  z-index: -1;
+  z-index: 0;
 
   @media (max-width: $tablet-width-only) {
     content: none;
