--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,6 +2,7 @@
   position: sticky;
   top: 100vh;
   padding-top: 66px;
+  background-color: $basic-white;
 
   @media (max-width: $tablet-width-only) {
     padding-top: 20px;
