--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -44,6 +44,7 @@
   border-radius: 5px;
   height: max-content;
   flex-shrink: 0;
+  z-index: 10;
 
   min-width: 180px;
   margin-right: 7px;
